Fix layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,18 +4,16 @@
 }
 
 body {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size: 18px;
 	padding: 0;
-	position: absolute;
 	width: 100%;
-	height: 100%;
 	margin: 0;
 	background-color: aliceblue;
 }
 
+/* main element styles */
 .navbar-header {
-	position: absolute;
+	position: fixed;
+	top: 0;
 	width: 100%;
 	border-bottom: 0.3rem solid rgba(207, 165, 48, 0.849);
 	padding-bottom: 0.5rem;
@@ -34,15 +32,11 @@ body {
 	border-radius: 10%;
 }
 
-#auth-buttons-div a {
-	/* padding: .5rem; */
-}
-
 .auth-div {
 	width: 25%;
 	display: block;
 	background: #f7eded;
-	margin: 15% auto;
+	margin: 15% auto 0 auto;
 	padding: 0.7rem 0;
 	border-radius: 10% 10%;
 	text-align: center;
@@ -70,6 +64,29 @@ div {
 #main-nav-ul li:last-child {
 	margin-right: 0;
 }
+
+#navbar-main {
+	display: block;
+	background-color: #f7eded;
+	float: left;
+	width: 100%;
+}
+#navbar-main div,
+#navbar-main div button {
+	float: right;
+}
+#layout-footer {
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+}
+
+/* main element styles */
+
+a {
+	color: rgb(36, 8, 163);
+}
 a:link {
 	text-decoration: none;
 	color: rgb(36, 8, 163);
@@ -95,18 +112,6 @@ ul li {
 	margin: 0.7rem;
 }
 
-#navbar-main {
-	display: block;
-	background-color: #f7eded;
-	height: 100%;
-	float: left;
-	width: 100%;
-}
-#navbar-main div,
-#navbar-main div button {
-	float: right;
-}
-
 .form-group {
 	display: inline-block;
 	margin: 0.2rem;
@@ -115,7 +120,6 @@ ul li {
 }
 
 .form-group input {
-	width: 80%;
 	margin-top: 0.5rem;
 	padding: 0.5rem;
 	text-align: center;
@@ -135,4 +139,10 @@ ul li {
 	background-color: rgba(207, 165, 48, 0.849);
 	color: rgb(36, 8, 163);
 	border-radius: 15%;
+}
+
+#like-button {
+	position: fixed;
+	bottom: 0;
+	right: 0;
 }
